add more detail

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,13 +1,13 @@
 // COLORS
-// $primary-color: #02aab0;
-// $secondary-color: #00cdac;
+// $primary-color: #000000;
+// $secondary-color: #434343;
 
 $primary-color: #ff146e;
 $secondary-color: #fa75b3;
 
-$white-color: #fff;
+$white-color: #F0FFFF;
 
-$dark-grey: #333333;
+$dark-grey: #778899;
 
 $dark-blue-text: #272341; // For Headings
 
